--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(audio)
 add_subdirectory(assets)
 add_subdirectory(ecs)
 add_subdirectory(input)
+add_subdirectory(ui)
 add_subdirectory(graphics)
 add_subdirectory(utils)
