--- a/logic/CMakeLists.txt
+++ b/logic/CMakeLists.txt
@@ -14,4 +14,7 @@ target_include_directories(sample PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(sample PUBLIC ${CORE_TARGET})
 target_compile_definitions(sample PUBLIC SDL_MAIN_HANDLED)
 
+add_custom_command(TARGET sample POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:sample> $<TARGET_FILE_DIR:sample>
+        COMMAND_EXPAND_LISTS)
 message(STATUS "------------------------")
