static link gcc for openal

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -171,6 +171,9 @@ set(ALSOFT_UTILS OFF CACHE INTERNAL "")
 set(ALSOFT_INSTALL_EXAMPLES OFF CACHE INTERNAL "")
 set(ALSOFT_INSTALL_UTILS OFF CACHE INTERNAL "")
 set(ALSOFT_NO_CONFIG_UTIL OFF CACHE INTERNAL "")
+set(ALSOFT_STATIC_LIBGCC`ON CACHE INTERNAL "")
+set(ALSOFT_STATIC_STDCXX`ON CACHE INTERNAL "")
+set(ALSOFT_REQUIRE_WASAPI ON CACHE INTERNAL "")
 set(LIBTYPE SHARED CACHE INTERNAL "")
 
 FetchContent_MakeAvailable(openal_soft_project)
