--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -188,14 +188,15 @@ endif()
 # ##### SDL2_image
 
 find_package(SDL_image QUIET)
-if(TARGET SDL2_image::SDL2_image)
-    message(STATUS "Found library: SDL2_image")
-    target_link_libraries(${CORE_TARGET} PUBLIC SDL2_image::SDL2_image)
+if(TARGET SDL_image::SDL_image)
+    message(STATUS "Found library: SDL_image")
+    target_link_libraries(${CORE_TARGET} PUBLIC SDL_image::SDL_image)
 else()
-    # Try pkg config
-    pkg_search_module(SDL2_image_lib REQUIRED SDL2_image IMPORTED_TARGET)
-    if(SDL2_image_lib_FOUND)
-        target_link_libraries(${CORE_TARGET} PUBLIC PkgConfig::SDL2_image_lib)
+    find_package(SDL2_image REQUIRED)
+    # pkg_search_module(SDL2_image_lib REQUIRED SDL2_image IMPORTED_TARGET)
+    if(TARGET SDL2_image::SDL2_image)
+        message(STATUS "Found library: SDL2_image")
+        target_link_libraries(${CORE_TARGET} PUBLIC SDL2_image::SDL2_image)
     else()
         message(FATAL_ERROR "SDL2_image not found")
     endif()
@@ -225,9 +226,11 @@ set(ALSOFT_INSTALL_UTILS OFF CACHE INTERNAL "")
 set(ALSOFT_NO_CONFIG_UTIL OFF CACHE INTERNAL "")
 set(ALSOFT_STATIC_LIBGCC`ON CACHE INTERNAL "")
 set(ALSOFT_STATIC_STDCXX`ON CACHE INTERNAL "")
+set(ALSOFT_STATIC_WINPTHREAD ON CACHE INTERNAL "")
 if(UNIX)
 
 elseif(WIN32)
+    set(ALSOFT_BUILD_ROUTER ON CACHE INTERNAL "")
     set(ALSOFT_REQUIRE_WASAPI ON CACHE INTERNAL "")
 endif()
 set(LIBTYPE SHARED CACHE INTERNAL "")
