--- a/core/src/graphics/CMakeLists.txt
+++ b/core/src/graphics/CMakeLists.txt
@@ -1,2 +1,6 @@
 
+message(STATUS "Adding Core: Graphics")
+file(GLOB SRC_GRAPHICS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
+target_sources(${CORE_TARGET} PRIVATE ${SRC_GRAPHICS})
+
 add_subdirectory(renderer)
